[package]
name = "wifi-nina"
version = "0.1.0"
authors = ["David Flemström <david.flemstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
log = { version = "0.4.8", default-features = false }
nb = { version = "0.1.2", default-features = false }
no-std-net = { version = "0.3.0", default-features = false }
num_enum = { version = "0.4.2", default-features = false }
