[package]
name = "wifi-nina"
version = "0.1.1-alpha.0"
authors = ["David Flemström <david.flemstrom@gmail.com>"]
edition = "2018"
description = "An embedded driver for ublox NINA-W10-based WiFi boards (using ESP32), present on some Arduinos, or using the Adafruit AirLift series of chips"
repository = "https://github.com/dflemstr/wifi-nina/"
license = "MIT OR Apache-2.0"
keywords = ["wifi", "embedded", "airlift", "esp32", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.5.1", default-features = false }
byteorder = { version = "1.3.4", default-features = false }
embedded-hal = { version = "0.2.3", features = ["unproven"] }
log = { version = "0.4.8", default-features = false }
nb = { version = "0.1.2", default-features = false }
no-std-net = { version = "0.3.0", default-features = false }
num_enum = { version = "0.4.2", default-features = false }
